# ipl-dagster-pipeline

./: .editorconfig  .env.EXAMPLE  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile_dagster  Dockerfile_pipeline  Makefile  README.md  dagster.Dockerfile  dagster.docker.yaml  dagster.yaml  dev.python.Dockerfile  docker-compose.dev.yml  docker-compose.yml  pipeline.Dockerfile  pyproject.toml  pytest.ini  requirements-dagster.txt  requirements-dev.txt  requirements-pipeline.txt  requirements.txt  workspace.yaml
.github/workflows/: build-publish-branch.yml  build-publish-tag.yml  build-publish.yml  lint.yml  test.yml  validate.yml
etc/gtfs/: .gitkeep
pipeline/: __init__.py
pipeline/assets/: gtfs.py  radvis.py  sharing.py  traffic_incidents.py  webcams.py
pipeline/resources/: __init__.py  gdal.py  lamassu.py  postgis_geopandas_io_manager.py  webasset_io_manager.py
pipeline/sources/: __init__.py  lamassu.py  webcam_worker.py
pipeline/templates/: webcam_index.html.j2
pipeline/transformer/: cifs.py
pipeline/util/: urllib.py
scripts/: download_webcams.sh  start_runs_termination_script_in_background.sh  terminate_starting_and_started_runs.py
tests/: conftest.py
tests/sources/: test_webcam_worker.py
tests/transformer/: situation_1487640.xml  situation_2959413-4272241-4272242-4272245.xml  test_cifs.py
